[project]
name = "my-acp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acp-sdk>=1.0.0",
    "colorama>=0.4.6",
    "ipython>=9.4.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
]
